name:                chances-party
version:             0.1.0.0
synopsis:            Guest interaction at parties
description:         Please see README.md
homepage:            https://github.com/chances/servant#readme
license:             BSD3
license-file:        LICENSE
author:              Chance Snow
maintainer:          git@chancesnow.me
copyright:           Copyright 2016 Chance Snow
category:            Web, App
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , Config
                     , Database.Party
  other-modules:       Api.Auth
                     , Api.Envelope
                     , Api.User
                     , Database.Models
                     , Middleware.Cors
                     , Middleware.Flash
                     , Middleware.Session
                     , Spotify.Api.Auth
                     , Spotify.Api.Types
                     , Spotify.Api.Types.Scope
                     , Spotify.Client
                     , Utils
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , containers
                     , either
                     , envelope
                     , http-api-data
                     , http-client >= 0.5 && < 0.6
                     , http-client-tls
                     , http-types
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , random-strings
                     , servant
                     , servant-client
                     , servant-server
                     , serversession
                     , serversession-backend-persistent
                     , serversession-frontend-wai
                     , string-conversions
                     , time
                     , text
                     , vault
                     , vector
                     , wai
                     , wai-cors
                     , wai-extra
                     , wai-session
                     , warp
  ghc-options:         -Wall -fno-warn-unused-binds -fno-warn-orphans -Werror
  default-language:    Haskell2010

executable chances-party-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , chances-party
                     , directory
                     , dotenv
  default-language:    Haskell2010

test-suite chances-party-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chances/servant
