name:                chances-party
version:             0.1.0.0
synopsis:            Guest interaction at parties
description:         Please see README.md
homepage:            https://github.com/chances/chances-party#readme
license:             BSD3
license-file:        LICENSE
author:              Chance Snow
maintainer:          git@chancesnow.me
copyright:           Copyright 2016 Chance Snow
category:            Web, App
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , Api.Auth
                     , Api.Envelope
                     , Api.User
                     , Config
                     , Database.Party
                     , Database.Models
  other-modules:       Middleware.Cors
                     , Middleware.Flash
                     , Middleware.Session
                     , Utils
                     , Views.Index
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-builder
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , cookie
                     , containers
                     , envelope
                     , http-client >= 0.5 && < 0.6
                     , http-client-tls
                     , http-types
                     , iso3166-country-codes
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , servant
                     , servant-blaze
                     , servant-client
                     , servant-server
                     , servant-spotify
                     , serversession
                     , serversession-backend-persistent
                     , serversession-frontend-wai
                     , shakespeare
                     , string-conversions
                     , time
                     , text
                     , vault
                     , wai
                     , wai-cors
                     , wai-extra
                     , wai-session
                     , warp
  ghc-options:         -Wall -fno-warn-unused-binds -fno-warn-orphans -Werror
  default-language:    Haskell2010

executable chances-party-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , chances-party
                     , directory
                     , dotenv
                     , enclosed-exceptions
  default-language:    Haskell2010

test-suite chances-party-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , hspec
                     , servant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chances/chances-party
